// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuNav snapshot tests should match snapshot when header is hidden 1`] = `
.c0 {
  position: relative;
  height: 32vw;
  width: 32vw;
}

.c0 li:first-child {
  -webkit-transform: rotate(-5deg);
  -ms-transform: rotate(-5deg);
  transform: rotate(-5deg);
}

.c0 li:nth-child(2) {
  -webkit-transform: rotate(15deg);
  -ms-transform: rotate(15deg);
  transform: rotate(15deg);
}

.c0 li:nth-child(3) {
  -webkit-transform: rotate(35deg);
  -ms-transform: rotate(35deg);
  transform: rotate(35deg);
}

.c0 li:nth-child(4) {
  -webkit-transform: rotate(55deg);
  -ms-transform: rotate(55deg);
  transform: rotate(55deg);
}

.c0 li:nth-child(5) {
  -webkit-transform: rotate(75deg);
  -ms-transform: rotate(75deg);
  transform: rotate(75deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(7) {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}

.c0 li:nth-child(8) {
  -webkit-transform: rotate(140deg);
  -ms-transform: rotate(140deg);
  transform: rotate(140deg);
}

.c0 li:nth-child(9) {
  -webkit-transform: rotate(160deg);
  -ms-transform: rotate(160deg);
  transform: rotate(160deg);
}

.c1 {
  position: absolute;
  font-size: 1.5em;
  width: 4vw;
  height: 100%;
  left: 50%;
  margin-left: -2vw;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  list-style: none;
  cursor: pointer;
}

.c1 a {
  text-align: center;
  line-height: 3vw;
  position: absolute;
  top: 1vw;
  border-radius: 50%;
  font-size: 0.95vw;
  color: white;
  height: 3vw;
  width: 3vw;
  background: rgb(24,27,33);
  padding: 0;
  border: 0;
  box-shadow: 0px 0px 0.5vw 0.05vw rgb(0,0,0,0.8);
}

.c1 a:hover,
.c1 button:hover {
  box-shadow: 0px 0px 0.2vw 0.05vw rgb(0 0 0 / 50%);
}

.c2 {
  position: absolute;
  top: 1vw;
  border-radius: 50%;
  font-size: 0.95vw;
  color: white;
  height: 3vw;
  width: 3vw;
  background: rgb(24,27,33);
  padding: 0;
  border: 0;
  box-shadow: 0px 0px 0.5vw 0.1vw rgb(0,0,0,0.8);
  cursor: pointer;
}

<MenuNav>
  <styled.nav>
    <nav
      className="c0"
    >
      <ul>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              tabIndex="-1"
            >
              <button
                className="c2"
                tabIndex="-1"
              >
                <i
                  className="fas fa-user"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              data-testid="toggleHeader"
              onClick={[Function]}
              tabIndex="-1"
            >
              <button
                className="c2"
                data-testid="toggleHeader"
                onClick={[Function]}
                tabIndex="-1"
              >
                <i
                  className="far fa-eye"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="searchChat"
              tabIndex="-1"
              to="/searchChat"
            >
              <LinkAnchor
                data-testid="searchChat"
                href="/searchChat"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="searchChat"
                  href="/searchChat"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-search"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="searchUsers"
              tabIndex="-1"
              to="/searchUsers"
            >
              <LinkAnchor
                data-testid="searchUsers"
                href="/searchUsers"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="searchUsers"
                  href="/searchUsers"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-user-plus"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="requests"
              tabIndex="-1"
              to="/requests"
            >
              <LinkAnchor
                data-testid="requests"
                href="/requests"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="requests"
                  href="/requests"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-address-card"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="logout"
              tabIndex="-1"
              to="/logout"
            >
              <LinkAnchor
                data-testid="logout"
                href="/logout"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="logout"
                  href="/logout"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-sign-out-alt"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
      </ul>
    </nav>
  </styled.nav>
</MenuNav>
`;

exports[`MenuNav snapshot tests should match snapshot when header is not hidden 1`] = `
.c0 {
  position: relative;
  height: 32vw;
  width: 32vw;
}

.c0 li:first-child {
  -webkit-transform: rotate(-5deg);
  -ms-transform: rotate(-5deg);
  transform: rotate(-5deg);
}

.c0 li:nth-child(2) {
  -webkit-transform: rotate(15deg);
  -ms-transform: rotate(15deg);
  transform: rotate(15deg);
}

.c0 li:nth-child(3) {
  -webkit-transform: rotate(35deg);
  -ms-transform: rotate(35deg);
  transform: rotate(35deg);
}

.c0 li:nth-child(4) {
  -webkit-transform: rotate(55deg);
  -ms-transform: rotate(55deg);
  transform: rotate(55deg);
}

.c0 li:nth-child(5) {
  -webkit-transform: rotate(75deg);
  -ms-transform: rotate(75deg);
  transform: rotate(75deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(7) {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}

.c0 li:nth-child(8) {
  -webkit-transform: rotate(140deg);
  -ms-transform: rotate(140deg);
  transform: rotate(140deg);
}

.c0 li:nth-child(9) {
  -webkit-transform: rotate(160deg);
  -ms-transform: rotate(160deg);
  transform: rotate(160deg);
}

.c1 {
  position: absolute;
  font-size: 1.5em;
  width: 4vw;
  height: 100%;
  left: 50%;
  margin-left: -2vw;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  list-style: none;
  cursor: pointer;
}

.c1 a {
  text-align: center;
  line-height: 3vw;
  position: absolute;
  top: 1vw;
  border-radius: 50%;
  font-size: 0.95vw;
  color: white;
  height: 3vw;
  width: 3vw;
  background: rgb(24,27,33);
  padding: 0;
  border: 0;
  box-shadow: 0px 0px 0.5vw 0.05vw rgb(0,0,0,0.8);
}

.c1 a:hover,
.c1 button:hover {
  box-shadow: 0px 0px 0.2vw 0.05vw rgb(0 0 0 / 50%);
}

.c2 {
  position: absolute;
  top: 1vw;
  border-radius: 50%;
  font-size: 0.95vw;
  color: white;
  height: 3vw;
  width: 3vw;
  background: rgb(24,27,33);
  padding: 0;
  border: 0;
  box-shadow: 0px 0px 0.5vw 0.1vw rgb(0,0,0,0.8);
  cursor: pointer;
}

<MenuNav>
  <styled.nav>
    <nav
      className="c0"
    >
      <ul>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              tabIndex="-1"
            >
              <button
                className="c2"
                tabIndex="-1"
              >
                <i
                  className="fas fa-user"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              data-testid="toggleHeader"
              onClick={[Function]}
              tabIndex="-1"
            >
              <button
                className="c2"
                data-testid="toggleHeader"
                onClick={[Function]}
                tabIndex="-1"
              >
                <i
                  className="far fa-eye-slash"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="searchChat"
              tabIndex="-1"
              to="/searchChat"
            >
              <LinkAnchor
                data-testid="searchChat"
                href="/searchChat"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="searchChat"
                  href="/searchChat"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-search"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="searchUsers"
              tabIndex="-1"
              to="/searchUsers"
            >
              <LinkAnchor
                data-testid="searchUsers"
                href="/searchUsers"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="searchUsers"
                  href="/searchUsers"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-user-plus"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="requests"
              tabIndex="-1"
              to="/requests"
            >
              <LinkAnchor
                data-testid="requests"
                href="/requests"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="requests"
                  href="/requests"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-address-card"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="logout"
              tabIndex="-1"
              to="/logout"
            >
              <LinkAnchor
                data-testid="logout"
                href="/logout"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="logout"
                  href="/logout"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-sign-out-alt"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
      </ul>
    </nav>
  </styled.nav>
</MenuNav>
`;

exports[`MenuNav snapshot tests should match snapshot when search is hidden and path is /searchChat 1`] = `
.c0 {
  position: relative;
  height: 32vw;
  width: 32vw;
}

.c0 li:first-child {
  -webkit-transform: rotate(-5deg);
  -ms-transform: rotate(-5deg);
  transform: rotate(-5deg);
}

.c0 li:nth-child(2) {
  -webkit-transform: rotate(15deg);
  -ms-transform: rotate(15deg);
  transform: rotate(15deg);
}

.c0 li:nth-child(3) {
  -webkit-transform: rotate(35deg);
  -ms-transform: rotate(35deg);
  transform: rotate(35deg);
}

.c0 li:nth-child(4) {
  -webkit-transform: rotate(55deg);
  -ms-transform: rotate(55deg);
  transform: rotate(55deg);
}

.c0 li:nth-child(5) {
  -webkit-transform: rotate(75deg);
  -ms-transform: rotate(75deg);
  transform: rotate(75deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(7) {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}

.c0 li:nth-child(8) {
  -webkit-transform: rotate(140deg);
  -ms-transform: rotate(140deg);
  transform: rotate(140deg);
}

.c0 li:nth-child(9) {
  -webkit-transform: rotate(160deg);
  -ms-transform: rotate(160deg);
  transform: rotate(160deg);
}

.c1 {
  position: absolute;
  font-size: 1.5em;
  width: 4vw;
  height: 100%;
  left: 50%;
  margin-left: -2vw;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  list-style: none;
  cursor: pointer;
}

.c1 a {
  text-align: center;
  line-height: 3vw;
  position: absolute;
  top: 1vw;
  border-radius: 50%;
  font-size: 0.95vw;
  color: white;
  height: 3vw;
  width: 3vw;
  background: rgb(24,27,33);
  padding: 0;
  border: 0;
  box-shadow: 0px 0px 0.5vw 0.05vw rgb(0,0,0,0.8);
}

.c1 a:hover,
.c1 button:hover {
  box-shadow: 0px 0px 0.2vw 0.05vw rgb(0 0 0 / 50%);
}

.c2 {
  position: absolute;
  top: 1vw;
  border-radius: 50%;
  font-size: 0.95vw;
  color: white;
  height: 3vw;
  width: 3vw;
  background: rgb(24,27,33);
  padding: 0;
  border: 0;
  box-shadow: 0px 0px 0.5vw 0.1vw rgb(0,0,0,0.8);
  cursor: pointer;
}

<MenuNav>
  <styled.nav>
    <nav
      className="c0"
    >
      <ul>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              tabIndex="-1"
            >
              <button
                className="c2"
                tabIndex="-1"
              >
                <i
                  className="fas fa-user"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              data-testid="toggleHeader"
              onClick={[Function]}
              tabIndex="-1"
            >
              <button
                className="c2"
                data-testid="toggleHeader"
                onClick={[Function]}
                tabIndex="-1"
              >
                <i
                  className="far fa-eye-slash"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="searchChat"
              tabIndex="-1"
              to="/searchChat"
            >
              <LinkAnchor
                data-testid="searchChat"
                href="/searchChat"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="searchChat"
                  href="/searchChat"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-search"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="searchUsers"
              tabIndex="-1"
              to="/searchUsers"
            >
              <LinkAnchor
                data-testid="searchUsers"
                href="/searchUsers"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="searchUsers"
                  href="/searchUsers"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-user-plus"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="requests"
              tabIndex="-1"
              to="/requests"
            >
              <LinkAnchor
                data-testid="requests"
                href="/requests"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="requests"
                  href="/requests"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-address-card"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              data-testid="toggleSearch"
              onClick={[Function]}
            >
              <button
                className="c2"
                data-testid="toggleSearch"
                onClick={[Function]}
              >
                <i
                  className="fas fa-caret-up"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="logout"
              tabIndex="-1"
              to="/logout"
            >
              <LinkAnchor
                data-testid="logout"
                href="/logout"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="logout"
                  href="/logout"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-sign-out-alt"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
      </ul>
    </nav>
  </styled.nav>
</MenuNav>
`;

exports[`MenuNav snapshot tests should match snapshot when search is not hidden and path is /searchChat 1`] = `
.c0 {
  position: relative;
  height: 32vw;
  width: 32vw;
}

.c0 li:first-child {
  -webkit-transform: rotate(-5deg);
  -ms-transform: rotate(-5deg);
  transform: rotate(-5deg);
}

.c0 li:nth-child(2) {
  -webkit-transform: rotate(15deg);
  -ms-transform: rotate(15deg);
  transform: rotate(15deg);
}

.c0 li:nth-child(3) {
  -webkit-transform: rotate(35deg);
  -ms-transform: rotate(35deg);
  transform: rotate(35deg);
}

.c0 li:nth-child(4) {
  -webkit-transform: rotate(55deg);
  -ms-transform: rotate(55deg);
  transform: rotate(55deg);
}

.c0 li:nth-child(5) {
  -webkit-transform: rotate(75deg);
  -ms-transform: rotate(75deg);
  transform: rotate(75deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(6) {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
}

.c0 li:nth-child(7) {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}

.c0 li:nth-child(8) {
  -webkit-transform: rotate(140deg);
  -ms-transform: rotate(140deg);
  transform: rotate(140deg);
}

.c0 li:nth-child(9) {
  -webkit-transform: rotate(160deg);
  -ms-transform: rotate(160deg);
  transform: rotate(160deg);
}

.c1 {
  position: absolute;
  font-size: 1.5em;
  width: 4vw;
  height: 100%;
  left: 50%;
  margin-left: -2vw;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  list-style: none;
  cursor: pointer;
}

.c1 a {
  text-align: center;
  line-height: 3vw;
  position: absolute;
  top: 1vw;
  border-radius: 50%;
  font-size: 0.95vw;
  color: white;
  height: 3vw;
  width: 3vw;
  background: rgb(24,27,33);
  padding: 0;
  border: 0;
  box-shadow: 0px 0px 0.5vw 0.05vw rgb(0,0,0,0.8);
}

.c1 a:hover,
.c1 button:hover {
  box-shadow: 0px 0px 0.2vw 0.05vw rgb(0 0 0 / 50%);
}

.c2 {
  position: absolute;
  top: 1vw;
  border-radius: 50%;
  font-size: 0.95vw;
  color: white;
  height: 3vw;
  width: 3vw;
  background: rgb(24,27,33);
  padding: 0;
  border: 0;
  box-shadow: 0px 0px 0.5vw 0.1vw rgb(0,0,0,0.8);
  cursor: pointer;
}

<MenuNav>
  <styled.nav>
    <nav
      className="c0"
    >
      <ul>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              tabIndex="-1"
            >
              <button
                className="c2"
                tabIndex="-1"
              >
                <i
                  className="fas fa-user"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              data-testid="toggleHeader"
              onClick={[Function]}
              tabIndex="-1"
            >
              <button
                className="c2"
                data-testid="toggleHeader"
                onClick={[Function]}
                tabIndex="-1"
              >
                <i
                  className="far fa-eye-slash"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="searchChat"
              tabIndex="-1"
              to="/searchChat"
            >
              <LinkAnchor
                data-testid="searchChat"
                href="/searchChat"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="searchChat"
                  href="/searchChat"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-search"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="searchUsers"
              tabIndex="-1"
              to="/searchUsers"
            >
              <LinkAnchor
                data-testid="searchUsers"
                href="/searchUsers"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="searchUsers"
                  href="/searchUsers"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-user-plus"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="requests"
              tabIndex="-1"
              to="/requests"
            >
              <LinkAnchor
                data-testid="requests"
                href="/requests"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="requests"
                  href="/requests"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-address-card"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <styled.button
              data-testid="toggleSearch"
              onClick={[Function]}
            >
              <button
                className="c2"
                data-testid="toggleSearch"
                onClick={[Function]}
              >
                <i
                  className="fas fa-caret-down"
                />
              </button>
            </styled.button>
          </li>
        </styled.li>
        <styled.li>
          <li
            className="c1"
          >
            <Link
              data-testid="logout"
              tabIndex="-1"
              to="/logout"
            >
              <LinkAnchor
                data-testid="logout"
                href="/logout"
                navigate={[Function]}
                tabIndex="-1"
              >
                <a
                  data-testid="logout"
                  href="/logout"
                  onClick={[Function]}
                  tabIndex="-1"
                >
                  <i
                    className="fas fa-sign-out-alt"
                  />
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </styled.li>
      </ul>
    </nav>
  </styled.nav>
</MenuNav>
`;
